[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/hazards/up_dog.png" type="Texture" id=1]
[ext_resource path="res://hazards/scripts/stalactite.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 56, 52 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 52 )

[sub_resource type="CircleShape2D" id=5]
radius = 3.0

[node name="Stalactite" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 6
script = ExtResource( 2 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 4 )
texture = ExtResource( 1 )

[node name="CollisionDetection" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 519

[node name="Collider" type="CollisionShape2D" parent="CollisionDetection"]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="Anticipation" type="Area2D" parent="."]
collision_layer = 4

[node name="Collider" type="CollisionShape2D" parent="Anticipation"]
position = Vector2( 0, 52 )
shape = SubResource( 3 )

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 4

[node name="Collider" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2( 0, 52 )
shape = SubResource( 4 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 128

[node name="Collider" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 3 )
shape = SubResource( 5 )

[connection signal="body_entered" from="CollisionDetection" to="." method="_on_CollisionDetection_body_entered"]
[connection signal="area_entered" from="Anticipation" to="." method="_on_Anticipation_area_entered"]
[connection signal="area_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_area_entered"]
